[project]
name = "pycro-rts"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Hill"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "pycro_rts", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
stable-baselines3 = "^2.0"
numpy = ">=1.26"
matplotlib = "^3.9.0"
gymnasium = "^1.2.3"
torch = ">=2.0.0" 


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
